# slplugin

./: .gitignore  LICENSE  Makefile  README.md  dune-project  example.c  frama-c-ktsn.opam  slplugin.ml  test.smt2
bench/: ktsn.xml  setup.py  slplugin-results.xml  slplugin.xml
bench/ktsn/: ktsn.py
bench/slplugin/: slplugin.py
bp/: main.typ  references.bib  slides.odp  template.typ
examples/: complex_types.c  linked_list.c  lists.c  loop.c  loop2.c  loop_easy.c  loop_with_null.c  reverse_list.c  simple.c  test.c  test2.c  test3.c  testdls.c  testls.c  testls_return.c  testmulti.c  testmulti2.c  testnls.c
excel_abstract/: ExcelAtFIT.cls  bibliography.bib  excel-paper.tex
excel_poster/: main.typ  nahled.xcf
ip1_report/: slides.odp  template.typ
ip2_report/: ip2_slides.odp  main.typ  references.bib  template.typ
itt/: slides.odp
report/: main.typ  references.bib
src/: abstraction.ml  analysis.ml  astral_query.ml  common.ml  config.ml  dune  equiv_class.ml  formula.ml  func_call.ml  ivette.ml  main.ml  preprocessing.ml  printing.ml  simplification.ml  slplugin.ml  slplugin_options.ml  testing.ml  transfer.ml  types.ml
src/preprocessing/: block_builder.ml  condition_split.ml  constants.ml  instruction_type.ml  preprocessing.ml  stmt_split.ml  types.ml
test_programs/: all_list_types.c  all_list_types.yml  dls_double_free.c  dls_double_free.yml  dls_full.c  dls_full.yml  generic_structs.c  generic_structs.yml  ls_cyclic.c  ls_cyclic.yml  ls_full.c  ls_full.yml  ls_full_return.c  ls_full_return.yml  ls_full_single_function.c  ls_full_single_function.yml  ls_merge_lists.c  ls_merge_lists.yml  ls_nls_full.c  ls_nls_full.yml  ls_null_deref.c  ls_null_deref.yml  ls_use_after_free.c  ls_use_after_free.yml  nls_full.c  nls_full.yml  nls_memory_leak.c  nls_memory_leak.yml  postfix_calculator.c  postfix_calculator.yml  reverse_list.yml  stack_pointers.c  stack_pointers.yml
