(env
  (dev
    (flags
      (:standard
        ; turn errors into warnings
        -warn-error -26 ; Unused var
        -warn-error -27 ; Unused var strict
        -warn-error -33 ; Unused module open
        -g
      )
    )
  )
)

(include_subdirs unqualified)

(library
  (name ktsn)
  (public_name frama-c-ktsn.core)
  (modules :standard)
  (flags
    :standard
    -open Frama_c_kernel
    -g
  )
  (libraries
    frama-c.kernel
    frama-c-server.core
    astral
  )
  (inline_tests
    ; this is required to run inline tests in frama-c plugin
    ; https://git.frama-c.com/pub/frama-c/-/issues/2691
    (libraries frama-c.init.cmdline)
    (flags (-stop-on-error))
  )
  (preprocess
    (pps
      ppx_inline_test
    )
  )
)

(plugin
  (name ktsn)
  (libraries frama-c-ktsn.core)
  (site (frama-c plugins))
)
